--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html>
         <head>
             <meta charset="utf-8">
-            <title>Aprendizado em HTML</title>
+            <title>Primeiro Site</title>
             <link rel="stylesheet" href="style.css">
         </head>
         <body>
@@ -64,7 +64,7 @@ Que a sorte esteja sempre ao seu favor<br>
 Que nunca conheça todo esse horror<br>
 Lute por amor!<br>
 <br>                        
-Escute essa música e mais como essa em:<a href="https://www.youtube.com/watch?v=WHbU6s0jANc&list=PL_MGIJn4uSdKjyrMMsYnz-xpO3BkJSDGT" target="_blank">Tragam um copo de rum</a>
+Escute essa música e mais como essa em: <a href="https://www.youtube.com/watch?v=WHbU6s0jANc&list=PL_MGIJn4uSdKjyrMMsYnz-xpO3BkJSDGT" target="_blank">Tragam um copo de rum</a>
 <br>                        
                     </p>
                 </article>
